26-07-2002 Joel Mayes <bluebird@optushome.com.au>

        reverted to 1.17.2 due to problems with man pages

24-07-2002 Joel Mayes <bluebird@optushome.com.au>

        added DEPENDS to netpbm

24-07-2002 Joel Mayes <bluebird@optushome.com.au>

        Version bumped to 1.18
        added this file
