@@ -1,5 +1,5 @@
            SPELL=groff
-         VERSION=1.17.2
+         VERSION=1.18
           SOURCE=$SPELL-$VERSION.tar.gz
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
    SOURCE_URL[0]=$GNU_URL/$SPELL/$SOURCE
