@@ -1,0 +1,12 @@
+if  spell_installed  less; 
+    then
+    if  [  -e  /etc/profile ] && ! grep -q "groff_profile" /etc/profile;
+        then 
+            cat $SCRIPT_DIRECTORY/groff_profile >> /etc/profile;
+        else 
+            echo completion not added to /etc/profile
+    fi
+
+fi
+
+source /etc/profile
