@@ -1,0 +1,1 @@
+sedit '/# START groff profile -- do not remove this line/,/# END groff profile -- do not remove this line/d' /etc/profile
