@@ -1,0 +1,4 @@
+
+# START groff profile -- do not remove this line
+export MANPAGER="less -sR"
+# END groff profile -- do not remove this line
